--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>Vite App</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
